# cb-mpc

./: .gitignore  Makefile
.github/workflows/: build-prebuilds.yml
cb-mpc-ts/: CMakeLists.txt  README.md  binding.cpp  package-lock.json  package.json  tsconfig.json
cb-mpc-ts/examples/: agree-random.ts  browser.html  bun-ffi-demo.ts  curve-ops.ts  ecdsa-2pc.ts  ecdsa-mpc.ts  eddsa-2pc.ts  eddsa-mpc.ts  key-serialization.ts  mock-transport.ts
cb-mpc-ts/native/: CMakeLists.txt  exports.txt
cb-mpc-ts/src/: cbmpc-glue.d.ts  index.ts  module.ts
cb-mpc-ts/src/backends/: bun-ffi.ts  koffi-ffi.ts  native.ts  wasm.ts
cmake/: compilation_flags.cmake  openssl.cmake
demos-go/cb-mpc-go/internal/cgobinding/: ecdsa2p.cpp  ecdsa2p.h  schnorr2p.cpp  schnorr2p.h
demos-ts/: package-lock.json  package.json  tsconfig.json
demos-ts/src/: agree-random.ts  bun-ffi-demo.ts  curve-ops.ts  ecdsa-2pc.ts  ecdsa-mpc.ts  eddsa-2pc.ts  eddsa-mpc.ts  mock-transport.ts
scripts/openssl/: build-static-openssl-wasm.sh
src/cbmpc/core/: error.cpp  precompiled.h
src/cbmpc/crypto/: base_mod.cpp
wasm/: CMakeLists.txt  binding.cpp  package-lock.json  package.json  tsconfig.json
wasm/src/: cbmpc-glue.d.ts  index.ts  types.ts
